<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/toolbar"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@color/black"/>

    </Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/round_yellow"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_square"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/airplain"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/ticket_image"
            android:src="@drawable/baseline_airplane_ticket_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/airplain"
            app:layout_constraintBottom_toTopOf="@+id/country"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city"
            app:layout_constraintBottom_toTopOf="@+id/category"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country"
            app:layout_constraintBottom_toTopOf="@+id/plan"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category"
            app:layout_constraintBottom_toTopOf="@+id/price"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_yellow"
        android:text="@string/anadir_favoritos"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>