<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".logic.MainActivity">

    <Spinner
        android:id="@+id/categorias_viaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:entries="@array/categorias_viaje"/>

    <Button
        android:id="@+id/explorar_destinos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explorar_destinos_title"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorias_viaje" />

    <Button
        android:id="@+id/favoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explorar_destinos" />

    <Button
        android:id="@+id/recomendaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recomendaciones_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritos" />

</androidx.constraintlayout.widget.ConstraintLayout>